--- a/src/index.css
+++ b/src/index.css
@@ -22,5 +22,36 @@ code {
 }
 .icon {
   color:rgb(55, 148, 155);
-  z-index: 999;
+  z-index: 1;
 }
+
+.ship-container{
+  font-family: 'Open Sans', sans-serif;
+ 
+} 
+.modal{
+  background-color:rgba(11, 11, 11, 0.546);
+}
+/* 
+ min-height: 100vh;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background: rgb(33, 33, 33);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+  justify-content: center;
+  z-index: 1000; */
+
+.detail-h1, .detail-model{
+  font-family: 'Stardos Stencil', cursive;
+}
+.not-found{
+  font-family: 'Stardos Stencil', cursive;
+}
+
